# FastForgeX

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  notify-main.yml  publish.yml  sync-main.yml
fastforgex/: __init__.py
fastforgex/cli/: main.py  prompts.py
fastforgex/engine/: config.py  generator.py  renderer.py  resolver.py
fastforgex/templates/base/: README.md.j2  config.py.j2  exceptions.py.j2  logger.py.j2  main.py.j2  routes.py.j2
fastforgex/templates/ci/: ci.yml.j2
fastforgex/templates/db/: alembic_env.py.j2  base.py.j2  session.py.j2
fastforgex/templates/docker/: Dockerfile.j2  docker-compose.yml.j2  dockerignore.j2  entrypoint.sh.j2
fastforgex/templates/linting/: pre-commit-config.yaml.j2  pyproject.toml.j2
fastforgex/templates/makefile/: Makefile.j2
fastforgex/templates/tests/: conftest.py.j2  test_health.py.j2
scripts/: check_pypi_artifact_sync.py  enforce_version_bump.py  verify_wheel_matches_source.py  verify_wheel_version.py
tests/: test_cli_version.py  test_engine.py  test_generated_runtime.py  test_generator.py
