[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastforgex"
version = "0.1.1"
description = "FastAPI project scaffolding CLI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{name = "Syed Muhammad Awais Gillani", email = "iamawaisgillani@gmail.com"}]
keywords = ["fastapi", "scaffold", "cli", "generator", "boilerplate"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "click>=8.1.0",
    "jinja2>=3.1.0",
    "questionary>=2.0.1",
    "pydantic-settings>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "black>=24.4.0",
    "mypy>=1.8.0",
]

[project.scripts]
fastforgex = "fastforgex.cli.main:cli"

[project.urls]
Homepage = "https://github.com/syedawais355/FastForgeX"
Issues = "https://github.com/syedawais355/FastForgeX/issues"

[tool.hatch.build.targets.wheel]
packages = ["fastforgex"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "PTH"]

[tool.ruff.lint.isort]
known-first-party = ["fastforgex"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
